# afgh-pre-relic

./: .gitignore  .travis.yml  CMakeLists.txt  Is there a tissue in your code utils.c  LICENSE  Makefile  README.md  benchmark_pre.cpp  main.cpp  pre-afgh-relic.c  pre-afgh-relic.h  pre-hom.c
pre/: .gitignore  CMakeLists.txt  benchmark.cpp  benchmark_pre.cpp  encoding.c  encryption.c  keygen.c  main.cpp  pre-afgh-relic.c  pre-afgh-relic.h  test.cpp  utils.c
python-wrapper/: .gitignore  Makefile  README.md  pre_python.c  setup.py  test.py
scripts/: install-relic-ubuntu.sh
